force-app/main/default/objects/Eligibility_File__c/Eligibility_File__c.object-meta.xml
<CustomObject>
    <label>Eligibility File</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eligibility File</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>