force-app/main/default/objects/Eligibility_File__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Eligibility File</relationshipLabel>
    <relationshipName>Eligibility_File</relationshipName>
    <type>Lookup</type>
</CustomField>