force-app/main/default/objects/Eligibility_File__c/fields/Degree_Status__c.field-meta.xml
<CustomField>
    <fullName>Degree_Status__c</fullName>
    <label>Degree Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pursuing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>