force-app/main/default/objects/Eligibility_File__c/fields/File_Format__c.field-meta.xml
<CustomField>
    <fullName>File_Format__c</fullName>
    <label>File Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>