force-app/main/default/objects/Eligibility_File__c/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>Eligibility_Folder__c</referenceTo>
    <relationshipLabel>Eligibility Files</relationshipLabel>
    <relationshipName>Eligibility_Folder</relationshipName>
    <type>Lookup</type>
</CustomField>