force-app/main/default/objects/Eligibility_File__c/fields/Graduation_Type__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Type__c</fullName>
    <label>Graduation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UG</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>Certificates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>