force-app/main/default/objects/Eligibility_File__c/fields/Rank_Division__c.field-meta.xml
<CustomField>
    <fullName>Rank_Division__c</fullName>
    <label>Rank/Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Dvision</fullName>
            </value>
            <value>
                <fullName>Second Division</fullName>
            </value>
            <value>
                <fullName>Thirs Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>