force-app/main/default/objects/Eligibility_File__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Reupload_Required</fullName>
            </value>
            <value>
                <fullName>Recheck</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Re-uploaded</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
                <isActive>false</isActive>
                <label>Superseded</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>