force-app/main/default/objects/Eligibility_File__c/fields/Storage_Key__c.field-meta.xml
<CustomField>
    <fullName>Storage_Key__c</fullName>
    <label>Storage Key</label>
    <type>TextArea</type>
</CustomField>