force-app/main/default/objects/Eligibility_File__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Eligibility File</relationshipLabel>
    <relationshipName>Eligibility_File</relationshipName>
    <type>Lookup</type>
</CustomField>