force-app/main/default/objects/Eligibility_File__c/fields/University__c.field-meta.xml
<CustomField>
    <fullName>University__c</fullName>
    <label>University</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>University 1</fullName>
            </value>
            <value>
                <fullName>University 2</fullName>
            </value>
            <value>
                <fullName>University 3</fullName>
            </value>
            <value>
                <fullName>University 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>