force-app/main/default/objects/Eligibility_File__c/fields/Year_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Graduation__c</fullName>
    <label>Year of Graduation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>