force-app/main/default/objects/Eligibility_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>File_Name__c</columns>
    <columns>File_Type__c</columns>
    <columns>Folder__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Lead__c</columns>
    <columns>Status__c</columns>
    <columns>Storage_Key__c</columns>
    <columns>Uploaded_On__c</columns>
    <columns>File_UUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>